# logic_gates

./: Cargo.toml  README.md  transistor_improvements.md
alu/: CAPABILITIES_AND_ROADMAP.md  Cargo.toml  notes.md
alu/src/: control_unit.rs  cpu.rs  main.rs  memory.rs  register_file.rs  types.rs
examples/: Cargo.toml  bubble_sort.rs  factorial.rs  fibonacci.rs  hello_world.rs
gates/: Cargo.toml  notes.md
gates/src/: gate.rs  main.rs  truth_table.rs
k_map/: Cargo.toml  notes.md
riscv-asm/: Cargo.toml
riscv-asm/src/: encoder.rs  labels.rs  lib.rs  parser.rs
riscv-disasm/: Cargo.toml
riscv-disasm/src/: lib.rs
riscv-tools/: Cargo.toml
riscv-tools/src/: debugger.rs  formatter.rs  lib.rs  trace.rs
riscv32i-sim/: Cargo.toml  RISC_V_RULES.md  VERILOG_TO_RUST.md
riscv32i-sim/src/: alu.rs  control_unit.rs  lib.rs  memory.rs
