[workspace]
members = [
    "riscv32i-sim",    # Core simulator (renamed from alu)
    "riscv-asm",       # Assembler for RISC-V assembly
    "riscv-disasm",    # Disassembler for machine code
    "riscv-tools",     # Utilities and helper tools
    "examples",        # Example programs and demos
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dylan Rayburn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DylanRayburn/logic_gates"

[workspace.dependencies]
# Shared dependencies across all crates
thiserror = "1.0"
once_cell = "1.19"
num-traits = "0.2"

# CLI tools
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
prettytable-rs = "0.10"

# Parsing and text processing
nom = "7.1"
regex = "1.10"
pest = "2.7"
pest_derive = "2.7"

# File I/O
goblin = "0.8"  # ELF parser
