[package]
name = "alu"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"      # Bit-addressable memory and bitfields
fixed = "1.29.0"       # Fixed-point numbers
num = "0.4.3"         # Numeric traits and types
zerocopy = "0.8.31"    # Safe transmutation of bytes
modular-bitfield = "0.13.1"  # Bitfield structs